infra/k3s/base/apps/elasticsearch/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: elasticsearch-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`elasticsearch.localhost`)
      kind: Rule
      services:
        - name: elasticsearch
          port: 9200
